# openssl-pqe-engine

./: .gitattributes.renamed  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.build  Dockerfile.run  IBRand_Playbook.md  IBRand_overview.ddd  IronBridge OpenSSL Engine Sequence Diagram.txt  README.md  docker-compose.test.yml  docker-compose.yml  git_steps.txt  go.sh  ibrand.cnf  ibrand_simple.cnf
.github/workflows/: build.yml  integration-test.yml
PQCrypto-LWEKE/: Makefile
PQCrypto-LWEKE/VisualStudio/: frodoKEM-1344.vcxproj  frodoKEM-1344.vcxproj.filters  frodoKEM-640.vcxproj  frodoKEM-640.vcxproj.filters  frodoKEM-976.vcxproj  frodoKEM-976.vcxproj.filters  frodoKEM.sln
PQCrypto-LWEKE/VisualStudio/test_kem/: test_KEM1344.vcxproj  test_KEM1344.vcxproj.filters  test_KEM640.vcxproj  test_KEM640.vcxproj.filters  test_KEM976.vcxproj
PQCrypto-LWEKE/src/: CMakeLists.txt
PQCrypto-LWEKE/tests/: test_kem.c
PQCrypto-OQS/: .gitignore  appveyor.yml
PQCrypto-OQS/tests/: test_kem.c
_sample_data/: ibrand.cnf  ibrand_openssl.cnf  ironbridge_clientsetup_OOB_2.json  ironbridge_clientsetup_OOB_2.txt  ironbridge_clientsetup_OOB_3.json  ironbridge_clientsetup_OOB_3.txt  ironbridge_clientsetup_OOB_64FD8E07F4DC3AB26B0086FA8AD2E1E1.json
debian/: changelog  control  copyright
ibinit_engine/: CMakeLists.txt  ibinit_engine.c  stdrand_openssl.cnf
ibrand_common/: CMakeLists.txt  Makefile.linux  my_base64.c  my_base64.h  my_config.c  my_config.h  my_filelock.c  my_filelock.h  my_json.c  my_json.h  my_logging.c  my_logging.h  my_utils.c  my_utils.h  my_utilslib.h  my_utilslib.version
ibrand_engine/: CMakeLists.txt  e_ibrand.c  ibrand_config.c  ibrand_config.h  ibrand_engine.c  ibrand_get_new_entropy.c  ibrand_get_new_entropy.h  ibrand_main.c  ibrand_main.h  makefile
ibrand_engine/src/: .gitignore  Makefile.linux  daemon.c  ibrand.c  ibrand_win.c  ironbridge_getkey.h  libibrand.c  libibrand.h
ibrand_engine/src/init_scripts/: 75-ibrand.rules  ibrand.service
ibrand_lib/: .gitignore  CMakeLists.txt
ibrand_lib/software/: CMakeLists.txt  Makefile.linux  healthcheck.c  libibrand.c  libibrand.h  libibrand.version  libibrand_config.c  libibrand_config.h  libibrand_get_new_entropy.c  libibrand_get_new_entropy.h  libibrand_globals.h  libibrand_private.h  writeentropy.c
ibrand_openssl/: Makefile.linux  e_ibrand.c  e_ibrand.d  ibrand_openssl.cnf  infnoise-openssl-master.txt  makefile
ibrand_service/: .gitignore  CMakeLists.txt  IB_SymmetricEncryption.c  IB_SymmetricEncryption.h  RFC2898DeriveBytes.c  RFC2898DeriveBytes.h  ibrand_service.c  ibrand_service.h  ibrand_service_aes.c  ibrand_service_aes.h  ibrand_service_comms.c  ibrand_service_comms.h  ibrand_service_config.c  ibrand_service_config.h  ibrand_service_datastore.c  ibrand_service_datastore.h  ibrand_service_kem.c  ibrand_service_kem.h  ibrand_service_shmem.c  ibrand_service_shmem.h  ibrand_service_utils.c  ibrand_service_utils.h  makefile  test_aes.c
liboqs/: appveyor.yml
stdrand_engine/: Makefile.linux  stdrand_engine.c
